# app-sui

./: .gitignore  ChangeLog.md  default.nix  ledger_app.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build_and_functional_tests.yml  coding_style_checks.yml  guidelines_enforcer.yml  swap_ci_workflow.yml
dep/alamgu/: github.json
dep/ledger-nanos-sdk/: github.json
dep/ledger-secure-sdk-nanox/: github.json
dep/ledger-secure-sdk-stax/: github.json
docker/: run-build-in-docker.sh
docs/: MIGRATION-GUIDE-BLOCK-PROTOCOL.md  MIGRATION-GUIDE-GETPUBKEY.md  MIGRATION-GUIDE-GETVERSION.md  MIGRATION-GUIDE-SIGN.md  MIGRATION-README.md  MIGRATION-STRATEGY.md  apdu.md  async-to-sync-migration.md  block-protocol.md
ragger-tests/: requirements.txt  test_app_mainmenu.py  test_provide_trusted_dynamic_descriptor_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_personal_message.py  test_sign_sui_stake_1.py  test_sign_sui_stake_3.py  test_sign_sui_transfer_1.py  test_sign_sui_transfer_2.py  test_sign_sui_transfer_3.py  test_sign_sui_transfer_invalid.py  test_sign_token_transfer_1.py  test_sign_token_transfer_2.py  test_sign_token_transfer_invalid.py  utils.py
ragger-tests/application_client/: client.py
rust-app/: Cargo.toml  build.rs
rust-app/alamgu-async-block/: Cargo.toml
rust-app/alamgu-async-block/src/: lib.rs  prompts.rs
rust-app/bin-src/: main.rs
rust-app/ledger-crypto-helpers/: Cargo.toml  ChangeLog.md
rust-app/ledger-crypto-helpers/.cargo/: config.toml
rust-app/ledger-crypto-helpers/src/: common.rs  ed25519.rs  eddsa.rs  hasher.rs  internal.rs  lib.rs
rust-app/ledger-log/: Cargo.toml
rust-app/ledger-log/src/: lib.rs
rust-app/ledger-parser-combinators/: Cargo.toml
rust-app/ledger-parser-combinators/enum-init/src/: lib.rs
rust-app/ledger-parser-combinators/src/: async_parser.rs  core_parsers.rs  interp_parser.rs  json_interp.rs  lib.rs
rust-app/ledger-parser-combinators/src/bcs/: async_parser.rs  interp_parser.rs  mod.rs
rust-app/ledger-parser-combinators/src/protobufs/: async_parser.rs
rust-app/ledger-parser-combinators/trie-enum/src/: lib.rs
rust-app/src/: app_main.rs  crypto_helpers.rs  ctx.rs  ctx_sync.rs  handle_apdu.rs  implementation.rs  interface.rs  lib.rs  main_nanos.rs  main_stax.rs  main_stax_sync.rs  menu.rs  parser.rs  settings.rs  ui.rs  utils.rs
rust-app/src/crypto_helpers/: common.rs  ed25519.rs  eddsa.rs  hasher.rs
rust-app/src/ctx_sync/: block_protocol.rs  reader.rs
rust-app/src/parser/: common.rs  object.rs  tuid.rs  tx.rs
rust-app/src/swap/: mod.rs  panic_handler.rs  params.rs
rust-app/src/sync/: app_main.rs  ctx.rs  handle_apdu.rs  implementation.rs  mod.rs  parser.rs  ui.rs
rust-app/src/sync/ctx/: block_protocol.rs
rust-app/src/sync/parser/: bip32.rs  common.rs  state_machine_example.rs  tx.rs  tx_state_machine.rs
rust-app/src/sync/ui/: common.rs  nbgl.rs
rust-app/src/ui/: common.rs  nano.rs  nbgl.rs
tests/standalone/: conftest.py  requirements.txt  test_sign_sui_stake_2.py  test_sign_sui_transfer_1.py  test_sign_token_transfer_1.py  test_sign_token_transfer_2.py
tests/standalone/application_client/: client.py  sui_keychain.py
tests/swap/: _helper_tool.py  cal_helper.py  conftest.py  helper_tool_build_dependencies.py  helper_tool_clone_dependencies.py  requirements.txt  test_sui.py
