[package]
name = "sui"
version = "1.5.0"
authors = ["Obsidian Systems"]
edition = "2021"
autobins = false
resolver = "2"

[build-dependencies]
image = "0.25.7"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-parser-combinators = { path = "./ledger-parser-combinators" }
alamgu-async-block = { path = "./alamgu-async-block" }
zeroize = { version = "1.5.2", default-features = false }
base64 = { version = "0.13.0", default-features = false }
num_enum = { version = "0.5", default-features = false }
pin-cell = "0.2.0"
pin-project = "1.0.10"
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1" }
defer = "0.2.1"
either = { version = "1.14.0", default-features = false }

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = []
# Pass --features speculos to enable logging and change log level.
speculos = [ "ledger_device_sdk/unit_test", "ledger_device_sdk/debug", "ledger_device_sdk/log_trace" ]

[target.'cfg(target_family = "bolos")'.dependencies]
ledger_device_sdk = { version = "1.32.0", features=["sys", "nano_nbgl"] }

[target.'cfg(target_family = "bolos")'.dev-dependencies.ledger_device_sdk]
version = "1.32.0"
features = [ "sys", "nano_nbgl", "unit_test" ]

[[bin]]
name = "sui"
test = false
path = "bin-src/main.rs"

[profile.dev]
# We need this to ensure stack usage is minimal even on speculos
opt-level = 3
# This is needed to avoid this error while doing 'cargo stack-sizes'
#    error: undefined symbol: core::panicking::panic::
overflow-checks = false
lto = "fat"
[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("nanos", "nanosplus", "nanox", "flex", "stax", "apex_p"))'] }

[package.metadata.ledger]
name = "Sui"
path = ["44'/784'"]
curve = ["ed25519"]
flags = "0x800"

[package.metadata.ledger.nanox]
icon = "sui-small.gif"

[package.metadata.ledger.nanosplus]
icon = "sui-small.gif"

[package.metadata.ledger.stax]
icon = "sui_32x32.gif"

[package.metadata.ledger.flex]
icon = "sui_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "sui_32x32.png"
