[package]
name = "alamgu-async-block"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-log = { path = "../ledger-log" }
pin-project = "1.0.10"
ledger_device_sdk = { version = "1.31.0", features=["sys"] }
ledger-parser-combinators = { path = "../ledger-parser-combinators" }

[features]
default = []
prompts = []
