[package]
name = "ledger-crypto-helpers"
version = "0.2.1"
edition = "2018"

[dev-dependencies]
ledger_device_sdk = { version = "1.31.0", features = [ "sys", "unit_test" ] }
testmacro = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git" }
hex-literal = "0.3"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
base64 = { version = "0.13.0", default-features = false }
ledger_device_sdk = { version = "1.31.0", features = ["sys"] }
zeroize = { version = "1.5.2", default-features = false }

[patch.crates-io]
ledger_device_sdk = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", branch = "y333/feature_log" }
